<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <DUT Name="MachineCmd_typ" Id="{708bf799-07bb-0f3d-3ba9-c282c5278e05}">
    <Declaration><![CDATA[TYPE MachineCmd_typ :
STRUCT
	Enable		: BOOL;
	Start		: BOOL;
	Stop		: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>